--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
         oReq.addEventListener("load", function() {
             window.alert(this.responseText);
         });
-        oReq.open("GET", "http://localhost:8090/untitled5");
+        oReq.open("GET", "http://13dcba58.ngrok.io/api/about");
         oReq.send();
     </script>
     <style type="text/css"></style>
