--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
         oReq.addEventListener("load", function() {
             window.alert(this.responseText);
         });
-        oReq.open("GET", "http://127.0.0.1.xip.io:63343/api/about");
+        oReq.open("GET", "http://localhost:63343/untitled1/src/foo.txt");
         oReq.send();
     </script>
     <style type="text/css"></style>
